--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -142,5 +142,5 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 
 /* side nav */
 .sticky .btn-top {opacity:1}
-.side-nav {position:fixed;right:30px;bottom:30px}
+.side-nav {position:fixed;right:30px;bottom:30px;z-index:10}
 .side-nav .btn-kakao {margin-top:10px}
