--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -14,7 +14,7 @@
 
     .ui-modal.type-premium .ui-modal-header img{width:81px;}
     .ui-modal.type-premium .ui-modal-header .logo{top:25px; left:20px;}
-    .ui-modal .btn-close{left:auto; right:10px; margin-left:0; top:5px; transform: scale(0.6) rotate(45deg);}
+    .ui-modal .btn-close{left:auto; right:10px; margin-left:0; top:5px; transform: scale(0.6) rotate(45deg);background-color:rgba(0,0,0,.7)}
 
     .ui-modal.type-premium .ui-modal-cont{padding:60px 0 50px;}
     .ui-modal.type-premium .tit h2{font-size:30px}
@@ -317,10 +317,6 @@
     .teacher-list{padding:10px 40px 0}
     .btn-gold.type-more {width:40%;}
 
-    /* side nav */
-    .side-nav {right:12px;bottom:20px}
-    .side-nav .btn-kakao {margin-top:8px}
-
     .page-leader .leader-section-a {margin-top:-240px}
 
     .leader-info{margin:0 auto 0; padding-bottom:350px;  background: url('../../resources/images/common/top_bg.png') no-repeat 50% 100% / cover;}
@@ -343,4 +339,21 @@
     .leader-info .btn-area{float:left;}
     .leader-info .btn-gold{position:relative; height:50px; border-radius:25px; padding:10px 40px; font-size:16px; margin:0; font-weight:500; font-family:'Noto Sans KR'; background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6);}
     .leader-info .btn-gold::before{background-size:cover; width:100px; height:100px; top:-30px; left:-42px;}
+
+    .ui-modal.type-goldkey .ui-modal-cont .tit {display:none}
+
+    /* side nav */
+    .side-nav {right:12px;bottom:20px}
+    .side-nav .btn-kakao {margin-top:8px}
+}
+@media (max-width:510px) {
+    .ui-modal-cont .leader-list {padding:0 10px}
+    .ui-modal-cont .leader-list ul {display:flex;flex-wrap:wrap}
+    .ui-modal-cont .leader-list li {margin:0 10px;width:calc(50% - 20px)}
+    .ui-modal-cont .teacher-item {width:100%;height:auto;min-height:250px}
+    .ui-modal-cont .teacher-item .info dd {max-height:72px;display:-webkit-box;-webkit-line-clamp:4;overflow:hidden;-webkit-box-orient:vertical;}
+}
+@media (max-width:320px) {
+    .ui-modal-cont .teacher-item .btn-area {padding-bottom:10px}
+    .ui-modal-cont .teacher-item .btn {font-size:14px;padding:9px 14px}
 }
