--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -63,6 +63,7 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .base-body-a {width:100%;}
 .base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
 .base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
+.base-container {max-width:1500px;margin:0 auto}
 
 /* base header */
 .sticky .base-header{background:#1f2023; padding:20px 20px 14px; max-width:100%; height:50px;}
