--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -261,3 +261,9 @@
 .leader-section-c .more-area .btn-more:after {content:'';display:block;position:absolute;background-color:#fff;left:50%;top:50%}
 .leader-section-c .more-area .btn-more:before {width:20px;height:2px;margin:-1px 0 0 -10px}
 .leader-section-c .more-area .btn-more:after {width:2px;height:20px;margin:-10px 0 0 -1px}
+
+/* login */
+.login-box {max-width:1100px;margin:0 auto;background-color:#fff;border-radius:30px;box-shadow:10px 0 10px rgba(0,0,0,.07);padding:60px 0}
+.login-area {max-width:585px;margin:0 auto}
+
+.from-item {display:table;width:100%}
