--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -56,6 +56,8 @@ font-feature-settings:'liga';
 
 /* base layout */
 body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 50% 0;}
+body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg') no-repeat 50% 0;}
+
 .base-skip {position:fixed;z-index:100;}
 .base-layer {position:relative;z-index:20;}
 .base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch; padding-top:110px;}
@@ -63,6 +65,8 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .base-body-a {width:100%;}
 .base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
 .base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
+
+
 
 /* base header */
 .sticky .base-header{background:#1f2023; padding:20px 20px 14px; max-width:100%; height:50px;}
