--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -271,6 +271,8 @@
 /* banner */
 .ajax-banner{position:absolute; top:-10px; right:-60px; z-index: 1; width:750px;}
 .ajax-banner .banner-swiper{margin:0 auto;width:560px;}
+.ajax-banner .banner-swiper a{display: block; margin:0 auto;}
+.ajax-banner .banner-swiper img{width:100%;display: block;  margin:0 auto;max-width:max-content}
 .ajax-banner .slick-prev{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; left:-80px; position: absolute; top:50%; z-index: 2; margin-top:-34px;}
 .ajax-banner .slick-next{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; transform: rotate(180deg); right:-80px; position: absolute; top:50%; z-index: 2; margin-top:-34px;}
 
