--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -63,6 +63,7 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .base-body-a {width:100%;}
 .base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
 .base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
+.page-sub .base-footer {background-image:url("../../resources/images/common/footer_bg_c.png");height:400px}
 .base-container {max-width:1500px;margin:0 auto}
 
 /* base header */
@@ -145,3 +146,11 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 .sticky .btn-top {opacity:1}
 .side-nav {position:fixed;right:30px;bottom:30px;z-index:10}
 .side-nav .btn-kakao {margin-top:10px}
+
+/* checkbox */
+.box-checkbox-a {position:relative;min-height:24px;display:inline-block}
+.box-checkbox-a label {position:relative;padding-left:38px;line-height:24px;display:inline-block;font-size:24px;color:#292a2e}
+.box-checkbox-a .form-checkbox {position:absolute;left:0;top:0;opacity:0}
+.box-checkbox-a label:before {content:'';position:absolute;left:0;top:0;width:24px;height:24px;border-radius:0;border:1px solid #dadada;background-color:#fff;box-sizing:border-box}
+.box-checkbox-a label:after {content:'';position:absolute;left:3px;top:3px;width:20px;height:20px;background:url("../../resources/images/common/blt-check.png") no-repeat 0 0}
+.box-checkbox-a input[type="checkbox"]:checked+label:before {background-color:#292a2e;border-color:#292a2e}
