--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -65,7 +65,7 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .base-body-a {width:100%;}
 .base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
 .base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
-.page-sub .base-footer {background-image:url("../../resources/images/common/footer_bg_c.png");height:400px}
+.page-sub .base-footer {background-image:url("../../resources/images/common/footer_bg_d.png");height:400px}
 .base-container {max-width:1500px;margin:0 auto; position:relative;}
 
 
@@ -115,6 +115,7 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 
 /* footer */
 .footer-area {max-width:1304px;margin:0 auto;padding-top:290px}
+.page-sub .footer-area {padding-top:250px}
 .footer-content {position:relative;padding-left:246px}
 .footer-content .footer-logo {position:absolute;top:0;left:0;width:162px;height:32px;background:url("../../resources/images/common/footer-logo.png") no-repeat 0 0;background-size:100%}
 .footer-content .footer-nav {margin-bottom:24px}
