--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -291,7 +291,7 @@
 .btn-gold.big:focus:before,
 .btn-gold.big:hover:before {opacity:.5}
 .login-other {max-width:1100px;margin:20px auto 0;padding:0 28px;display:flex;justify-content:space-between}
-.login-other .other-item {}
+.login-other .other-item .box-checkbox-a {margin-right:26px}
 .login-other .link-join {position:relative;padding-right:16px;display:inline-block}
 .login-other .link-join:after {content:'';position:absolute;display:inline-block;width:10px;height:10px;border:solid #36383f;border-width:2px 2px 0 0;-webkit-transform:rotate(45deg);transform:rotate(45deg);top:50%;right:0;z-index:10;margin-top:-5px}
 
