--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -277,7 +277,7 @@
 .ajax-banner .slick-next{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; transform: rotate(180deg); right:-80px; position: absolute; top:50%; z-index: 2; margin-top:-34px;}
 
 /* login */
-.login-box {max-width:1100px;margin:0 auto;background-color:#fff;border-radius:30px;box-shadow:10px 0 10px rgba(0,0,0,.07);padding:60px 0}
+.box-a {max-width:1100px;margin:0 auto;background-color:#fff;border-radius:30px;box-shadow:10px 0 10px rgba(0,0,0,.07);padding:60px 0}
 .login-area {max-width:585px;margin:0 auto}
 .login-area .btn-gold {margin-top:40px}
 .btn-gold.big {position:relative; height:99px; border-radius:50px; padding:12px 60px; width:100%;font-size:36px; font-weight:500; font-family:'Noto Sans KR'; background:linear-gradient(-69deg,#fff28c, #daa337, #dda93e 70%, #ebbc4c 80%, #fff28c);box-shadow:0 0 12px rgba(0,0,0,.17);border:none}
@@ -295,7 +295,7 @@
 .login-other .link-join {position:relative;padding-right:16px;display:inline-block}
 .login-other .link-join:after {content:'';position:absolute;display:inline-block;width:10px;height:10px;border:solid #36383f;border-width:2px 2px 0 0;-webkit-transform:rotate(45deg);transform:rotate(45deg);top:50%;right:0;z-index:10;margin-top:-5px}
 .login-other .link-join .link-txt {text-decoration:underline;font-size:24px;color:#36383f}
-.login-box .form-item .form-col-a {vertical-align:middle}
+.box-a .form-item .form-col-a {vertical-align:middle}
 
 .form-item {display:table;width:100%}
 .form-item ~ .form-item {margin-top:18px}
