--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -311,9 +311,26 @@
 .agree-area .btn-folding {height:38px;border:1px solid #494032;border-radius:19px;padding:0 22px;font-size:16px;color:#494032}
 .agree-area .btn-folding:after {content:'';display:inline-block;width:8px;height:8px;border:solid #494032;border-width:2px 2px 0 0;-webkit-transform:rotate(135deg);transform:rotate(135deg);vertical-align:middle;margin:-5px 0 0 8px}
 .agree-area .active .btn-folding:after {-webkit-transform:rotate(-45deg);transform:rotate(-45deg);margin-top:0}
-.agree-area .active .agree-content {margin-top:12px}
+.agree-area .agree-content {-webkit-transition:all .2s ease-out;transition:all .2s ease-out;height:0;overflow:hidden}
+.agree-area .active .agree-content {margin-top:12px;background-color:#e2e2e2;padding:30px 24px;height:auto;max-height:400px;overflow-y:auto;-webkit-overflow-scrolling:touch}
 
-/* form */
+/* terms */
+.terms-box .terms-tit-a {font-size:18px;color:#222;font-weight:500;line-height:24px}
+.terms-box .terms-tit-b {font-size:18px;margin-top:12px;font-weight:400;color:#222;line-height:24px}
+.terms-box .terms-tit-c {font-size:16px;margin-top:8px;line-height:24px;color:#444}
+.terms-box .terms-txt-a {color:#565656;font-size:16px;line-height:24px}
+.terms-box .terms-indent-a {color:#666;font-size:16px;line-height:24px;margin-top:8px;padding-left:22px;text-indent:-22px}
+.terms-box .terms-indent-b {color:#666;font-size:16px;line-height:24px;padding-left:8px;text-indent:-8px}
+.terms-box .terms-blt-a {font-size:18px;color:#222;font-weight:500;position:relative;padding-left:12px;line-height:24px}
+.terms-box .terms-blt-a:before {content:'';display:block;position:absolute;width:4px;height:4px;border-radius:50%;left:0;top:10px;background-color:#222}
+.terms-box .terms-blt-b {color:#565656;font-size:16px;line-height:24px;padding-left:12px;position:relative}
+.terms-box .terms-blt-b:before {content:'';display:block;position:absolute;width:4px;height:4px;border-radius:50%;left:0;top:10px;background-color:#999}
+.terms-box .terms-blt-a ~ .terms-blt-a {margin-top:12px}
+.terms-box .terms-tit-b + .terms-txt-a {margin-top:8px}
+.terms-box .terms-inner-a {margin-top:10px;padding-left:12px}
+.terms-box .terms-inner-b {margin-top:6px;padding-left:22px}
+
+    /* form */
 .form-item,
 .form-group {display:table;width:100%}
 .form-item ~ .form-item {margin-top:18px}
@@ -331,3 +348,4 @@
 .form-item .input-a::-moz-placeholder {color:#bfbfbf;font-weight:300}
 .form-item .input-a:-ms-input-placeholder {color:#bfbfbf;font-weight:300}
 .form-item .input-a:-moz-placeholder {color:#bfbfbf;font-weight:300}
+
