--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -330,7 +330,7 @@
 .terms-box .terms-inner-a {margin-top:10px;padding-left:12px}
 .terms-box .terms-inner-b {margin-top:6px;padding-left:22px}
 
-    /* form */
+/* form */
 .form-item,
 .form-group {display:table;width:100%}
 .form-item ~ .form-item {margin-top:18px}
@@ -339,7 +339,7 @@
 .form-item .form-col-c {width:220px}
 .form-item .form-col-btn {width:1px;white-space:nowrap}
 .form-item .form-col-txt {width:1px;white-space:nowrap;padding:0 10px;font-size:24px;color:#000;font-weight:500}
-.form-item [class^="form-col-"] + .form-col-d,
+.form-item [class^="form-col-"] + .form-col-select,
 .form-item [class^="form-col-"] + .form-col-btn {padding-left:10px}
 .form-item label {font-size:28px;color:#000}
 .form-item .input-a {border:2px solid #eee;border-radius:14px;height:72px;width:100%;padding:0 12px;font-size:28px;font-weight:500;outline:none;color:#565656}
